# sabiql

./: .coderabbit.yaml  .dbx.toml  .dbx.toml.example  .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  compose.yml  install.sh  lefthook.yml  mise.toml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml  update-homebrew-tap.yml
scripts/: init.sql  seed.sql
src/: error.rs  lib.rs  main.rs
src/app/: action.rs  browse_session.rs  cell_edit_state.rs  command.rs  completion.rs  confirm_dialog_state.rs  connection_cache.rs  connection_error.rs  connection_error_state.rs  connection_list.rs  connection_setup_state.rs  connection_state.rs  ddl.rs  effect.rs  effect_runner.rs  er_state.rs  er_task.rs  explain_context.rs  explorer_mode.rs  flash_timer.rs  focused_pane.rs  graph_builder.rs  input_mode.rs  inspector_tab.rs  keybindings.rs  keymap.rs  layout.rs  message_state.rs  metadata_cache.rs  mod.rs  mode.rs  nav_intent.rs  palette.rs  query_execution.rs  reducer.rs  render_schedule.rs  result_history.rs  result_interaction.rs  runtime_state.rs  sql_lexer.rs  (+9 more)
src/app/cache/: lru_cache.rs
src/app/cmd/: completion_engine.rs  connection.rs  effect.rs  runner.rs  test_support.rs  utility.rs
src/app/effect_handlers/: completion.rs  connection.rs  er.rs  metadata.rs  mod.rs  query.rs  test_support.rs
src/app/keybindings/: connections.rs  editors.rs  mod.rs  normal.rs  overlays.rs  types.rs
src/app/model/: app_state.rs  explain_context.rs
src/app/policy/: mod.rs
src/app/ports/: clipboard.rs  config_writer.rs  connection_store.rs  db_operation_error.rs  ddl_generator.rs  dsn_builder.rs  er_exporter.rs  er_log_writer.rs  graphviz.rs  metadata.rs  mod.rs  query_executor.rs  (+4 more)
src/domain/: column.rs  command_tag.rs  er.rs  explain_plan.rs  foreign_key.rs  graph.rs  index.rs  metadata.rs  mod.rs  query_history.rs  query_result.rs  rls.rs  schema.rs  table.rs  trigger.rs
src/infra/: mod.rs  utils.rs
src/ui/: mod.rs  theme.rs  tui.rs
tests/: README.md  adapter_postgres.rs  render_snapshots.rs
tests/harness/: fixtures.rs  mod.rs
tests/render_snapshots/: connection_flow.rs  connection_management.rs  main.rs  overlays.rs  result_history.rs  result_pane.rs  style_assertions.rs
tests/snapshots/: render_snapshots__command_line_input.snap  render_snapshots__command_palette_overlay.snap  render_snapshots__confirm_dialog.snap  render_snapshots__confirm_dialog_delete_active_connection.snap  render_snapshots__confirm_dialog_delete_inactive_connection.snap  render_snapshots__confirm_dialog_delete_preview_low_risk.snap  render_snapshots__confirm_dialog_update_preview.snap  render_snapshots__confirm_dialog_update_preview_rich.snap  render_snapshots__connection_error_collapsed.snap  render_snapshots__connection_error_expanded.snap  render_snapshots__connection_error_expanded_with_tabs.snap  render_snapshots__connection_flow__connection_error_collapsed.snap  render_snapshots__connection_flow__connection_error_expanded.snap  render_snapshots__connection_flow__connection_error_expanded_with_tabs.snap  render_snapshots__connection_flow__connection_setup_cursor_at_head.snap  render_snapshots__connection_flow__connection_setup_cursor_at_tail.snap  render_snapshots__connection_management__connection_selector_with_active_service.snap  render_snapshots__connection_management__connection_selector_with_long_service_name.snap  render_snapshots__connection_management__connection_selector_with_long_service_name.snap.new  render_snapshots__connection_management__connection_selector_with_multibyte_service_name.snap  render_snapshots__connection_management__connection_selector_with_multiple_connections.snap  render_snapshots__connection_management__connection_selector_with_service_entries.snap  render_snapshots__connection_selector_with_multiple_connections.snap  render_snapshots__connection_setup_form.snap  render_snapshots__connection_setup_with_validation_errors.snap  render_snapshots__empty_query_result.snap  render_snapshots__er_table_picker_all_selected.snap  render_snapshots__er_table_picker_filtered.snap  render_snapshots__er_table_picker_modal.snap  render_snapshots__er_table_picker_multi_select.snap  render_snapshots__er_table_picker_single_select.snap  render_snapshots__er_waiting_progress.snap  render_snapshots__error_message_in_footer.snap  render_snapshots__explorer_connections_mode.snap  render_snapshots__explorer_connections_mode_empty.snap  render_snapshots__explorer_shows_not_connected_when_no_active_connection.snap  render_snapshots__focus_mode_fullscreen_result.snap  render_snapshots__focus_on_result_pane.snap  render_snapshots__footer_shows_success_message.snap  render_snapshots__help_overlay.snap  (+54 more)
(+302 files in other folders)
