[package]
name = "dbtui"
version = "0.1.0"
edition = "2024"
description = "A TUI database browser integrating dbn and dbx functionality"
license = "MIT"
repository = "https://github.com/riii111/dbtui-rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full", "test-util"] }
tokio-util = "0.7"
futures = "0.3"
color-eyre = "0.6"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
csv = "1"

[dev-dependencies]
pretty_assertions = "1"
rstest = "0.19"
tempfile = "3"
insta = "1"

[profile.release]
lto = true
codegen-units = 1
