[package]
name = "sabiql"
version = "1.10.0"
edition = "2024"
description = "A fast, driver-less TUI for browsing and editing PostgreSQL databases"
license = "MIT"
repository = "https://github.com/riii111/sabiql"
homepage = "https://github.com/riii111/sabiql"
readme = "README.md"
keywords = ["postgresql", "tui", "database", "cli", "sql"]
categories = ["command-line-utilities", "database"]

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["sync", "time", "io-util", "process", "rt-multi-thread", "macros", "fs"] }
tokio-util = "0.7"
futures = "0.3"
color-eyre = "0.6"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
dirs = "5"
dotenvy = "0.15"
csv = "1"
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
arboard = "3"
nucleo-matcher = "0.3"
unicode-width = "0.2"
unicode-casefold = "0.2"
lru = "0.16"
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "rustls"], optional = true }

[features]
default = []
self-update = ["dep:self_update"]
test-support = []

[dev-dependencies]
rstest = "0.19"
tempfile = "3"
insta = "1"
mockall = "0.13"
tokio = { version = "1", features = ["test-util"] }

[[test]]
name = "render_snapshots"
required-features = ["test-support"]

[profile.release]
lto = true
codegen-units = 1

[lints.clippy]
# Groups
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Pedantic suppressions
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
doc_markdown = "allow"
similar_names = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
items_after_statements = "allow"
needless_pass_by_value = "allow"  # Action/Command/PathBuf by-value in core APIs; refactor is out of scope
unused_self = "allow"
implicit_hasher = "allow"
match_wildcard_for_single_variants = "allow"
struct_field_names = "allow"

# Nursery suppressions
missing_const_for_fn = "allow"
significant_drop_tightening = "allow"
option_if_let_else = "allow"
future_not_send = "allow"
branches_sharing_code = "allow"
iter_with_drain = "allow"  # drain(..) inside loops where Vec is reused between iterations
collection_is_never_read = "allow"  # false positive: Vec used for sorting + hashing, not element-wise reads
used_underscore_binding = "allow"  # rstest #[case] doc params use _prefix convention; macro uses bindings internally

# Pedantic suppressions (continued)
naive_bytecount = "allow"  # bytecount crate would be an unnecessary dependency

# Restriction lints (opt-in)
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
print_stderr = "deny"
allow_attributes_without_reason = "deny"
